// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Composer preservation — chrome structure and tokens > preserves the Composer DOM structure and class-list in Agent mode (snapshot) 1`] = `
<div
  class="shrink-0 border-t border-[#1A1A1F] bg-[#0C0C10] p-3"
  data-testid="composer"
>
  <div
    data-testid="queue-stub"
  />
  <div
    class="relative rounded-xl border border-[#26262B] bg-[#111116] transition-colors focus-within:border-[#3F3F46]"
  >
    <div
      class="px-1 pt-1"
    >
      <div
        class="px-0.5"
      >
        <div
          data-testid="attachments-stub"
        />
      </div>
      <textarea
        class="flex rounded-md border-input py-2 focus-visible:outline-none focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 max-h-40 min-h-[44px] w-full resize-none border-0 bg-transparent px-2 pb-1 pt-2 shadow-none focus-visible:ring-0 text-[13px] text-[#EDEDF0] placeholder:text-[#3F3F46]"
        data-testid="composer-textarea"
        placeholder="Message the agent…"
        rows="1"
        style="height: 44px;"
      />
    </div>
    <div
      class="flex items-center gap-1.5 px-2 pb-2 pt-1"
    >
      <div
        class="flex items-center rounded-lg border border-[#1E1E23] bg-[#0F0F14] p-0.5"
      >
        <button
          class="px-2.5 py-1 text-[11px] rounded-md font-medium transition-all text-[#52525B] hover:text-[#A1A1AA]"
          title="Ask: read-only Q&A"
          type="button"
        >
          Ask
        </button>
        <button
          class="flex items-center gap-1 px-2.5 py-1 text-[11px] rounded-md font-medium transition-all text-[#52525B] hover:text-[#A1A1AA]"
          title="Plan: show the full plan and wait for approval before editing"
          type="button"
        >
          <span
            class="h-3 w-3"
            data-icon="ClipboardList"
          />
          Plan
        </button>
        <button
          class="px-2.5 py-1 text-[11px] rounded-md font-medium transition-all bg-[#2A1F4E] text-[#9B6AF1] shadow-sm"
          title="Agent: full autonomy"
          type="button"
        >
          Agent
        </button>
      </div>
      <button
        aria-label="Autonomy level: Medium"
        class="flex items-center gap-1.5 rounded-md border border-[#1E1E23] bg-[#0F0F14] px-2 py-0.5 text-[10.5px] text-[#71717A] transition-colors hover:bg-[#141419]"
        title="Autonomy: Medium — click to cycle"
        type="button"
      >
        <span
          class="h-1.5 w-1.5 rounded-full bg-[#9B6AF1]"
        />
        Medium
      </button>
      <div
        class="ml-auto flex items-center gap-1.5"
      >
        <button
          aria-label="Send"
          class="flex h-7 w-7 items-center justify-center rounded-lg border transition-all border-[#26262B] bg-[#15151A] text-[#3F3F46] cursor-not-allowed"
          disabled=""
          type="button"
        >
          <span
            class="h-3.5 w-3.5"
            data-icon="ArrowUp"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    class="mt-1.5 px-1 text-[10.5px] text-[#3F3F46] leading-snug"
  >
    Zoc can make mistakes · checkpoints let you roll back
  </div>
</div>
`;

exports[`Composer preservation — chrome structure and tokens > preserves the Composer DOM structure and class-list in Ask mode (snapshot) 1`] = `
<div
  class="shrink-0 border-t border-[#1A1A1F] bg-[#0C0C10] p-3"
  data-testid="composer"
>
  <div
    data-testid="queue-stub"
  />
  <div
    class="relative rounded-xl border border-[#26262B] bg-[#111116] transition-colors focus-within:border-[#3F3F46]"
  >
    <div
      class="px-1 pt-1"
    >
      <div
        class="px-0.5"
      >
        <div
          data-testid="attachments-stub"
        />
      </div>
      <textarea
        class="flex rounded-md border-input py-2 focus-visible:outline-none focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 max-h-40 min-h-[44px] w-full resize-none border-0 bg-transparent px-2 pb-1 pt-2 shadow-none focus-visible:ring-0 text-[13px] text-[#EDEDF0] placeholder:text-[#3F3F46]"
        data-testid="composer-textarea"
        placeholder="Ask about your code…"
        rows="1"
        style="height: 44px;"
      />
    </div>
    <div
      class="flex items-center gap-1.5 px-2 pb-2 pt-1"
    >
      <div
        class="flex items-center rounded-lg border border-[#1E1E23] bg-[#0F0F14] p-0.5"
      >
        <button
          class="px-2.5 py-1 text-[11px] rounded-md font-medium transition-all bg-[#1A3A5C] text-[#60a5fa] shadow-sm"
          title="Ask: read-only Q&A"
          type="button"
        >
          Ask
        </button>
        <button
          class="flex items-center gap-1 px-2.5 py-1 text-[11px] rounded-md font-medium transition-all text-[#52525B] hover:text-[#A1A1AA]"
          title="Plan: show the full plan and wait for approval before editing"
          type="button"
        >
          <span
            class="h-3 w-3"
            data-icon="ClipboardList"
          />
          Plan
        </button>
        <button
          class="px-2.5 py-1 text-[11px] rounded-md font-medium transition-all text-[#52525B] hover:text-[#A1A1AA]"
          title="Agent: full autonomy"
          type="button"
        >
          Agent
        </button>
      </div>
      <span
        aria-label="Read-only mode"
        class="flex items-center gap-1 rounded-md border border-[#60a5fa]/20 bg-[#60a5fa]/8 px-2 py-0.5 text-[10.5px] text-[#60a5fa]"
        title="Ask mode: no files will change"
      >
        Read-only
      </span>
      <div
        class="ml-auto flex items-center gap-1.5"
      >
        <button
          aria-label="Send"
          class="flex h-7 w-7 items-center justify-center rounded-lg border transition-all border-[#26262B] bg-[#15151A] text-[#3F3F46] cursor-not-allowed"
          disabled=""
          type="button"
        >
          <span
            class="h-3.5 w-3.5"
            data-icon="ArrowUp"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    class="mt-1.5 px-1 text-[10.5px] text-[#3F3F46] leading-snug"
  >
    Ask mode is read-only — no files change.
  </div>
</div>
`;
